Fixed htmlWebpackPlugin errors. Fixing linebreak-rule on eslint

--- a/resources/html/layouts/app.html
+++ b/resources/html/layouts/app.html
@@ -10,11 +10,11 @@
         
         <link rel="stylesheet" href="assets/css/main.css">
 
-        <meta property="og:url" content="http://google.com.br/" />
+        <meta property="og:url" content="http://www.google.com.br/" />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="title lorem" />
         <meta property="og:description" content="lorem impsun" />
-        <meta property="og:image" content="https://scontent.frao1-2.fna.fbcdn.net/v/t1.0-9/403078_498480466875575_613224798_n.png?oh=0a4166c4e8146ae6441ed8ad241a571d&oe=5A298621" />
+        <meta property="og:image" content="https://www.google.com.br/logos/doodles/2017/childrens-day-2017-brazil-5737042666323968-l.png" />
         <meta property="og:locale" content="pt_BR" />
     </head>
     <body>
