--- a/resources/html/pages/index.njk
+++ b/resources/html/pages/index.njk
@@ -3,6 +3,6 @@
 {% set title = 'Home page' %}
 
 {% block content %}
-  {% include 'partials/home.html' %}
+  {% include 'partials/webdoor.html' %}
 {% endblock %}
 
