Fixed bug at build proccess.

--- a/resources/html/partials/webdoor.html
+++ b/resources/html/partials/webdoor.html
@@ -1,4 +1,4 @@
-<div>
+<div style="display: block; max-width: 600px; margin: 0 40px;">
   <h2>welcome to the home page, {{ user }}</h2>
   <br>
   <p>You are in {{ config.env }} enviroment.</p>
