--- a/resources/html/partials/webdoor.html
+++ b/resources/html/partials/webdoor.html
@@ -1,4 +1,5 @@
-<div style="display: block; max-width: 600px; margin: 0 40px;">
+<div class="demo">
+  <img src="{{ config.image_src }}rick.png">
   <h2>welcome to the home page, {{ user }}</h2>
   <br>
   <p>You are in {{ config.env }} enviroment.</p>
